apps/ingress-proxy/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backorr
  namespace: ingress-proxy
spec:
  type: ExternalName
  externalName: backorr.internal.orriborri.com
