apps/ingress-proxy/ingress-backorr-orriborri-com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backorr-orriborri-com
    namespace: ingress-proxy
    annotations:
        external-dns.alpha.kubernetes.io/exclude: "true"
spec:
    ingressClassName: public
    tls:
        - secretName: orriborri-com-tls
    rules:
        - host: ENC[AES256_GCM,data:MXZtNA67iz0RlIhZDgO+6w==,iv:et3G+BGzGuGcxsQKRmal1c+N8enECrEaZwo0qR4HrX0=,tag:ikWS8p/IfxT2vvK9v3qojQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: backorr
                        port:
                            number: 5000
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2024-09-18T05:21:11Z"
    mac: ENC[AES256_GCM,data:rRIENUIYdgaDl2WzOIicxeKrtyorm80SR86nMMrASD4ZzqbNaIs8HJcjGNx662KTRLVYVV6rR8719Un/3QPHlL6IORWOdUEdSBpyyN0y9So8Db10eD9/Kq6rKzRUY3EXXYTqVvZAsenpaXJ60r7k4Q6cogzDhrSPByOHReYW+TU=,iv:6asbr2ithnisFtz8XSqfuyhybj8mzYZnUp6vOjh0Y3w=,tag:38vXFqsJlCHp+R1B2bXhXw==,type:str]
    pgp:
        - created_at: "2024-09-09T18:30:48Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA1X/kZ4Jzp5jAQ/8DV/6bO/S8LLBx/mr2w2RFi/0rgnWNsn3kUUE3ekaeitx
[...]
            1uF7W/QUCbdC
            =1RfA
            -----END PGP MESSAGE-----
          fp: 7A5DC69AD7F7A05AAF22EBD8005B9C45909B266E
    encrypted_regex: ^(hosts?)$
    version: 3.9.0
