apps/ingress-proxy/ingress-nectarine-fruitiex-org.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nectarine-fruitiex-org
  namespace: ingress-proxy
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: public
  tls:
    - secretName: orriborri-com-tls
  rules:
    - host: ENC[AES256_GCM,data:VC4IhfGK8KqJ1wj9E5KW6jZ8LhJlMA==,iv:VtCCOAtF6xIa6Wli6lwQL4Utf9rIvs53pI3ZwBBVXA4=,tag:OkZMuukh5zdHlVn+0v7xhg==,type:str]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nectarine
                port:
                  number: 5000
    - host: ENC[AES256_GCM,data:nzLNgxt7xFLIiGAJC2zY/7Hv,iv:FZWNapPkEy1hMydc1KVXDdqkS69biZXaNmWn2V9va2k=,tag:X+IPc4Mb/DVPaI/lQwF2qA==,type:str]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nectarine
                port:
                  number: 10002
    - host: ENC[AES256_GCM,data:igViFu1Cbl2Xd3C+Q5OAvQRrKg==,iv:SNM7a3WvXMLOeLfaoIYQaE6aC78daF8HfUtUUNTbUTI=,tag:587mRIsoh+T/+I+xYYencQ==,type:str]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nectarine
                port:
                  number: 5081
sops:
  kms: []
  gcp_kms: []
  azure_kv: []
  hc_vault: []
  age: []
  lastmodified: "2023-11-27T14:57:31Z"
  mac: ENC[AES256_GCM,data:ec310GIHQUzBww8SX6keRE+u1iaD5g9H20H81Nq74dOJtOxR2nUZkf6OYfFYlRHyQV777mms3u2ugvWy3GIk9Xy8Mnr0ficG5KjVgQDmFpZoK2IoWMdPmS2jDnXR97efKYYpXWWdd6j7TV2gdHmKwJT6BkCmUebm+HXvhiC1tOM=,iv:HnQkupGCro2+GKuiva2Iwo1LFIaPBzLYExan6wuSo+s=,tag:1RueaCRPu/BLJ/GtVf+1fg==,type:str]
  pgp:
    - created_at: "2023-04-10T17:59:38Z"
      enc: |-
        -----BEGIN PGP MESSAGE-----

        wcFMA8WjeZLD+fxwAQ//Y0MfVpk9G0PvpfLWMevIARlNbInfcRxDswfvNHK6Wjc7
[...]
        H1ye2GX0h7exzQkdMXEumjFoeJpyWLJ0n6fNef1PVTG2Eg==
        =ladq
        -----END PGP MESSAGE-----
      fp: 3536F7F9345D96C86FB7F9CD21FAFEE575B18815
  encrypted_regex: ^(hosts?)$
  version: 3.8.0
